apps/base/default/wordpress-woocommerce/wordpress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  namespace: default
  labels:
    app: wordpress
  annotations:
    keel.sh/policy: major
    keel.sh/trigger: poll
    keel.sh/approvals: '1'
    keel.sh/pollSchedule: '@daily'
    keel.sh/approvalDeadline: 672
spec:
  replicas: 1 # 4
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      securityContext:
        runAsUser: 0
        runAsGroup: 0
        fsGroup: 0
      containers:
      - name: wordpress
        image: bitnami/wordpress:6.6.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        volumeMounts:
        - mountPath: /bitnami/wordpress
          name: config
          subPath: wordpress/www
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: local-conf-pvc
---
kind: Service
apiVersion: v1
metadata:
  name: wordpress-service
  namespace: default
spec:
  selector:
    app: wordpress
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
    nginx.ingress.kubernetes.io/proxy-body-size: 80m
    gethomepage.dev/description: E-Commerce with WordPress.
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: More Apps
    gethomepage.dev/icon: https://www.irelandwebsitedesign.com/wp-content/uploads/2022/01/woocomrce.png
    gethomepage.dev/name: Wordpress Woocommerce
    gethomepage.dev/pod-selector: app=wordpress
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - 'wordpress.example.com'
    secretName: wordpress-tls
  rules:
  - host: wordpress.example.com
    http:
      paths:
      - pathType: Prefix
        path: '/'
        backend:
          service:
            name: wordpress-service
            port:
              number: 8080




---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-mysql
  namespace: default
  labels:
    app: wordpress-mysql
  annotations:
    keel.sh/policy: major
    keel.sh/trigger: poll
    keel.sh/approvals: '1'
    keel.sh/pollSchedule: '@daily'
    keel.sh/approvalDeadline: 672
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress-mysql
  template:
    metadata:
      labels:
        app: wordpress-mysql
    spec:
      securityContext:
        runAsUser: 0
        runAsGroup: 0
        fsGroup: 0
      containers:
      - name: wordpress-mysql
        image: bitnami/mariadb:11.4.2
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - mountPath: /bitnami/mariadb
          name: config
          subPath: wordpress/mariadb
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: local-conf-pvc
---
kind: Service
apiVersion: v1
metadata:
  name: wordpress-mysql
  namespace: default
spec:
  selector:
    app: wordpress-mysql
  ports:
  - protocol: TCP
    port: 3306
    targetPort: 3306
